--- a/views/rlogs.ejs
+++ b/views/rlogs.ejs
@@ -532,7 +532,7 @@
       //'order'       : [[0, 'desc']],
       'order'       : false,
       'paging'      : true,
-      'lengthChange': true,
+      'lengthChange': false,
       'searching'   : true,
       'ordering'    : true,
       'info'        : true,
