--- a/views/rlogs.ejs
+++ b/views/rlogs.ejs
@@ -257,11 +257,11 @@
                             title="Collapse">
                         <i class="fa fa-minus"></i></button>
                     <!--<button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                        <i class="fa fa-times"></i></button>
-                    </div>-->
+                        <i class="fa fa-times"></i></button>-->
+                    </div>
                 </div>
                 <!-- /.box-header -->
-                <div class="box-body table-responsive no-padding">
+                <div class="box-body table-responsive ">
                     <table id="savedlogs" class="table table-hover">
                       
                       <thead>
