--- a/views/rlogs.ejs
+++ b/views/rlogs.ejs
@@ -300,7 +300,7 @@
                           </td>
                          
                         <td><%= rlogs_list[i].comments %></td>
-                        <td><button class="btn btn-danger" data-toggle="modal" data-target="#modal-danger<%= i %>">Delete</button></td>
+                        <td><button class="btn btn-default" data-toggle="modal" data-target="#modal-danger<%= i %>"><i class="fa fa-close"></i></button></td>
                         
                         </tr>
                         <% } %>
